# OmniAI

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
omniai/audio/: __init__.py  api.py
omniai/audio/podcast/: api.py
omniai/audio/speech/: __init__.py  api.py  base.py  io.py
omniai/audio/speech/kokoro/: __init__.py  model.py  processor.py
omniai/core/: __init__.py  base.py  factory.py  manifest.py  runtime.py
omniai/core/backends/: __init__.py  onnx.py
omniai/services/omnitts/: api.py  dockerfile  main.py  pyproject.toml
omniai/services/speech/: README.md  api.py  dockerfile  factory.py  pyproject.toml  runtime.py  store.py
studio/: README.md  index.html  package-lock.json  package.json  vite.config.ts
studio/src/: App.tsx  api.ts  styles.css
tests/: test_kokoro.py  test_openai.py  test_podcast_api.py  test_speech_stream.py
