[project]
name = "omniai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "onnxruntime>=1.27.0",
    "phonemizer>=3.3.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "soundfile>=0.14.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
