[project]
name = "omnitts-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "omnitts",
    "uvicorn>=0.51.0",
]

[tool.uv.sources]
omnitts = { git = "https://github.com/JamorMoussa/OmniTTS.git" }
